{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 12,
  "lineage": "7e7def62-3659-65b4-8d74-79f1d2ddfbde",
  "resources": [
    {
      "module": "module.alb-asg",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:637423220354:loadbalancer/app/dev-pet-clinic-alb/bf6215a6bc0c6b2b",
            "arn_suffix": "app/dev-pet-clinic-alb/bf6215a6bc0c6b2b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-pet-clinic-alb-1449588993.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:637423220354:loadbalancer/app/dev-pet-clinic-alb/bf6215a6bc0c6b2b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-pet-clinic-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fda686e7cb502459"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-072cf29d9dd6aa221"
              },
              {
                "subnet_id": "subnet-0af9eedf7fdbebe3a"
              },
              {
                "subnet_id": "subnet-0fbffa7b08499db30"
              }
            ],
            "subnets": [
              "subnet-072cf29d9dd6aa221",
              "subnet-0af9eedf7fdbebe3a",
              "subnet-0fbffa7b08499db30"
            ],
            "tags": {
              "Application": "pet-clinic",
              "CostCenter": "project-autodeploy-cost",
              "Environment": "dev",
              "Name": "dev-pet-clinic-alb",
              "Owner": "praveen"
            },
            "tags_all": {
              "Application": "pet-clinic",
              "CostCenter": "project-autodeploy-cost",
              "Environment": "dev",
              "Name": "dev-pet-clinic-alb",
              "Owner": "praveen"
            },
            "vpc_id": "vpc-0eaa7a619670a1d8c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.alb-asg.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb-asg",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "application_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:637423220354:listener/app/dev-pet-clinic-alb/bf6215a6bc0c6b2b/fdec1eafe45998be",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:637423220354:targetgroup/pc-alb20240925185553016400000001/f2b4f2a5cea370fb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:637423220354:listener/app/dev-pet-clinic-alb/bf6215a6bc0c6b2b/fdec1eafe45998be",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:637423220354:loadbalancer/app/dev-pet-clinic-alb/bf6215a6bc0c6b2b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb-asg.aws_alb.application_load_balancer",
            "module.alb-asg.aws_alb_target_group.petclinic",
            "module.alb-asg.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb-asg",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "petclinic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:637423220354:targetgroup/pc-alb20240925185553016400000001/f2b4f2a5cea370fb",
            "arn_suffix": "targetgroup/pc-alb20240925185553016400000001/f2b4f2a5cea370fb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:637423220354:targetgroup/pc-alb20240925185553016400000001/f2b4f2a5cea370fb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pc-alb20240925185553016400000001",
            "name_prefix": "pc-alb",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "pet-clinic",
              "CostCenter": "project-autodeploy-cost",
              "Environment": "dev",
              "Name": "dev-pet-clinic-alb-target-group",
              "Owner": "praveen"
            },
            "tags_all": {
              "Application": "pet-clinic",
              "CostCenter": "project-autodeploy-cost",
              "Environment": "dev",
              "Name": "dev-pet-clinic-alb-target-group",
              "Owner": "praveen"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0eaa7a619670a1d8c"
          }
        }
      ]
    },
    {
      "module": "module.alb-asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423220354:security-group/sg-0fda686e7cb502459",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fda686e7cb502459",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-pet-clinic-alb-sg20240925185553016400000002",
            "name_prefix": "dev-pet-clinic-alb-sg",
            "owner_id": "637423220354",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "pet-clinic",
              "CostCenter": "project-autodeploy-cost",
              "Environment": "dev",
              "Name": "dev-pet-clinic-alb-sg",
              "Owner": "praveen"
            },
            "tags_all": {
              "Application": "pet-clinic",
              "CostCenter": "project-autodeploy-cost",
              "Environment": "dev",
              "Name": "dev-pet-clinic-alb-sg",
              "Owner": "praveen"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaa7a619670a1d8c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb-asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423220354:security-group/sg-0723e2f1bea6f8334",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0723e2f1bea6f8334",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fda686e7cb502459"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "dev-pet-clinic-instance-sg20240925185555394200000004",
            "name_prefix": "dev-pet-clinic-instance-sg",
            "owner_id": "637423220354",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "pet-clinic",
              "CostCenter": "project-autodeploy-cost",
              "Environment": "dev",
              "Name": "dev-pet-clinic-asg-sg",
              "Owner": "praveen"
            },
            "tags_all": {
              "Application": "pet-clinic",
              "CostCenter": "project-autodeploy-cost",
              "Environment": "dev",
              "Name": "dev-pet-clinic-asg-sg",
              "Owner": "praveen"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaa7a619670a1d8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb-asg.aws_security_group.alb_sg"
          ]
        }
      ]
    }
  ]
}